# inkognito

./: .gitignore  README.md
app/: .env.example  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
app/app/: globals.css  layout.tsx  page.tsx  types.ts
app/app/api/latest-proof/: route.ts
app/app/api/pdf-info/: route.ts
app/app/api/proof-status/: route.ts
app/app/api/prove/: route.ts
app/app/api/upload/: route.ts
app/app/api/verify/: route.ts
app/app/components/: ConfigureStep.tsx  DoneStep.tsx  Header.tsx  Icons.tsx  ProofBlueprint.tsx  ProvingStep.tsx  ScanStep.tsx  StepIndicator.tsx  UploadStep.tsx  UseCaseList.tsx
app/app/data/: checks.ts  use-cases.ts
app/app/hooks/: useStepNavigation.ts
self-vkeys/: vc_and_disclose_id.json
self2gnark/: go.mod  go.sum  main.go
sp1/: Cargo.toml
sp1-verifier-patch/: .cargo_vcs_info.json  Cargo.toml
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
sp1/script/: Cargo.toml
vkeys/: vc_and_disclose.json  vc_and_disclose_aadhaar.json
