[package]
name = "zkid-script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[dependencies]
sp1-sdk = "5.2.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
num-bigint = "0.4"
dotenv = "0.15"

[build-dependencies]
sp1-build = "5.2.4"
